# depp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
example/: dbt_project.yml  profiles.yml  snowflake_profiles.yml
example/models/: base_python_model.py  example_python_mode.py  model_with_indexes.py  my_python_model.py  test_partitioned_read.py  test_pg_geopandas.py  test_pg_pandas.py  test_pg_polars.py  test_sf_geopandas.py  test_sf_pandas.py  test_sf_polars.py  typed_with_narrowing.py
example/models/example/: base_python_model.py  combined_analysis.py  polars_analysis.py  schema.yml
src/dbt/adapters/depp/: __init__.py  __version__.py  adapter.py  type_inspector.py  typing.py
src/dbt/adapters/depp/cli/: __init__.py  main.py
src/dbt/adapters/depp/cli/commands/: __init__.py  experiment.py  init.py  inspect.py  new_model.py  validate.py
src/dbt/adapters/depp/cli/utils/: __init__.py  data_exporter.py  dbt_parser.py  dependency_extractor.py  marimo_generator.py  templates.py
src/dbt/adapters/depp/config/: __init__.py  adapter_type.py  connections.py  credential_wrapper.py  get_library_config.py  load_db_profile.py  model_config.py  profile_loader.py
src/dbt/adapters/depp/db/: __init__.py  base.py  postgres.py  snowflake.py
src/dbt/adapters/depp/executors/: __init__.py  abstract_executor.py  converters.py  executor.py  geo_pandas_executor.py  local_python_executor.py  pandas_executor.py  polars_executor.py  polars_local_executor.py  protocols.py  result.py
src/dbt/adapters/depp/executors/readers/: __init__.py  postgres.py  snowflake.py
src/dbt/adapters/depp/executors/writers/: __init__.py  postgres.py  snowflake.py
src/dbt/adapters/depp/typing/: __init__.py  base.py  dbt_objects.py
src/dbt/adapters/depp/utils/: __init__.py  ast_utils.py  general.py  profile_parsing.py  profiling.py  validation.py
src/dbt/include/depp/: __init__.py
src/dbt/include/depp/macros/materializations/: table.sql  view.sql
