[project]
name = "depp"
version = "0.1.0"
description = "DBT Enexis Python Postgres adapter - Run python scripts from any dbt project."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Yassin Chibrani", email = "y.chibrani@gmail.com" }]
keywords = ["dbt", "pandas", "runtime"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]
[project.urls]
Homepage = "https://github.com/YassinCh/depp"
Repository = "https://github.com/YassinCh/depp"

dependencies = [
    "dbt-core>=1.10.0",
    "pandas>=1.5.3",
    "numpy>=2.0.0",
    "dbt-postgres>=1.9.1",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pandas-stubs>=2.3.2.250827",
    "connectorx>=0.4.4",
    "asyncpg>=0.30.0,<0.31.0",
    "adbc-driver-postgresql>=1.8.0",
    "sqlalchemy>=2.0.43",
]

[project.optional-dependencies]
postgres = []
dev = [
    "matplotlib>=3.5.2",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
depp = { workspace = true }

[dependency-groups]
dev = [
    "depp",
]
