[project]
name = "dbt-depp"
dynamic = ["version"]
description = "DBT Enexis Python Postgres adapter - Run python scripts from any dbt project."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Yassin Chibrani", email = "y.chibrani@gmail.com" }]
keywords = [
    "dbt",
    "pandas",
    "runtime",
    "polars",
    "high-performance",
    "etl",
    "analytics",
    "data-engineering",
    "elt",
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "dbt-core>=1.10.0",
    "pandas>=1.5.3",
    "numpy>=2.0.0",
    "dbt-postgres>=1.9.1",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pandas-stubs>=2.3.2.250827",
    "connectorx>=0.4.4",
    "asyncpg>=0.30.0,<0.31.0",
    "adbc-driver-postgresql>=1.8.0",
    "sqlalchemy>=2.0.43",
    "geoalchemy2>=0.18.0",
    "snakeviz>=2.2.2",
    "geopandas>=1.1.1",
    "cyclopts>=3.24.0",
    "types-geopandas>=1.1.1.20250829",
    "momepy>=0.10.0",
    "asyncpg-stubs>=0.30.2",
    "marimo>=0.17.7",
    "ruff>=0.14.4",
    "adbc-driver-snowflake>=1.9.0",
    "dbt-snowflake>=1.7.0",
    "snowflake-connector-python[pandas]>=3.0.0",
    "snowflake-sqlalchemy>=1.5.0",
]

[project.optional-dependencies]
dev = ["matplotlib>=3.5.2", "requests>=2.32.3"]
[project.scripts]
dbt-depp = "dbt.adapters.depp.cli.main:main"

[project.urls]
Homepage = "https://github.com/YassinCh/depp"
Repository = "https://github.com/YassinCh/depp"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt"]

[tool.uv.workspace]
members = ["."]
[tool.ruff.lint]
ignore = [
    "ANN401",
    "TC001",
    "TC002",
    "S101",
    "D102",
    "COM812",
    "D100",   # Missing module docstring
    "D104",   # Missing docstring in __init__.py
    "D105",   # Missing docstring in magic method
    "D106",   # Missing docstring in nested class
    "D107",   # Missing docstring in __init__
    "D203",   # Blank line before class (conflicts with D211)
    "D213",   # Summary on second line (conflicts with D212)
    "D413",   # Missing blank line after last section
    # Exception messages - pedantic
    "TRY003", # Long exception message inline
    "EM101",  # Exception string literal
    "EM102",  # Exception f-string
    # TODO comments - noisy
    "TD002",
    "TD003",
    "FIX002",
    "TC003",
    "TC005",
    "TC006",
    "B008",
    "S603",
    "S608",   # SQL built from trusted internal identifiers
    "S102",   # exec() used for dbt compiled code execution
    "PLW2901",
    "FBT003",
    "FBT001",  # Boolean positional arg - protocol methods
    "FBT002",  # Boolean default arg - CLI commands
    "BLE001",  # Blind exception - intentional in validation
    "S607",    # Partial exec path - ty invocation
    "S701",    # Jinja2 autoescape - YAML/Python templates, not HTML
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004", # Magic value comparison
    "SLF001",  # Private member access
    "D",       # All docstring rules
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "FBT001",  # Boolean positional arg
    "FBT002",  # Boolean default arg
    "FBT003",  # Boolean positional value
    "PLR0913", # Many arguments - common in test parameterization
    "PGH003",  # Blanket type: ignore - acceptable in tests
]

[dependency-groups]
dev = [
    "ty>=0.0.16",
]

[tool.uv.sources]
depp = { workspace = true }
